@@ -130,6 +130,9 @@ public class Chant_EnhanceJewelry extends Chant
 				mob.location().send(mob,msg);
 				mob.location().show(mob,target,CMMsg.MSG_OK_VISUAL,L("<T-NAME> glows!"));
 				target.basePhyStats().setAbility(target.basePhyStats().ability()+1);
+				if(target instanceof Armor)
+					((Armor)target).setLayerAttributes((short)(((Armor)target).getLayerAttributes()&(~Armor.LAYERMASK_MULTIWEAR)));
+
 				target.basePhyStats().setLevel(target.basePhyStats().level()+3);
 				target.basePhyStats().setDisposition(target.basePhyStats().disposition()|PhyStats.IS_BONUS);
 				target.recoverPhyStats();
