@@ -679,7 +679,8 @@ Usage    : CHANT "ENHANCE JEWELRY" [TARGET NAME] \n\r\
 Example  : chant "enhance jewelry" ring\n\r\
 This chant causes any piece worn on the ears, neck, fingers, or wrist \
 to become permanently enchanted. Enchanted jewelry gives a better level \
-of protection for the wearer.  This spell is very draining on the caster, \
+of protection for the wearer, but may no longer be be multi-worn. \
+This spell is very draining on the caster, \
 however, causing the caster to lose 50 experience points.  The caster \
 must also be at full mana to cast.
 
